<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GoT Quiz</string>

    <string name="image">Characters map of Westeros</string>
    <string name="welcome">Welcome\u0020 to\u0020 the</string>
    <string name="warning">\u0020Be aware: certain questions may have multiple answers\u0020</string>
    <string name="stark_sword">The\u0020 name\u0020 of\u0020 House\u0020 Stark s\u0020 ancestral\u0020 sword\u0020 is</string>
    <string name="needle">Needle</string>
    <string name="longclaw">Longclaw</string>
    <string name="ice">Ice</string>
    <string name="oathkeeper">Oathkeeper</string>
    <string name="daenerys_nickname">Daenerys\u0020 Targaryen s\u0020 nickname\u0020 is</string>
    <string name="stormborn">Daenerys Stormborn</string>
    <string name="unburnt">The Unburnt</string>
    <string name="queen">Queen Mother</string>
    <string name="silver">The Silver Queen</string>
    <string name="mormont_disease">The\u0020 deadly\u0020 disease\u0020 Ser\u0020 Jorah\u0020 Mormont\u0020 contracted\u0020 is</string>
    <string name="mere">Pale mere</string>
    <string name="grayscale">Grayscale</string>
    <string name="plague">Grey plague</string>
    <string name="sickness">Great Spring Sickness</string>
    <string name="arya_direwolf">The\u0020 name\u0020 of\u0020 the\u0020 direwolf\u0020 adopted\u0020 by\u0020 Arya\u0020 Stark\u0020 is</string>
    <string name="type">your answer here</string>
    <string name="varys_nickname">Lord\u0020 Varys\u0020 nickname\u0020 is</string>
    <string name="hound">The Hound</string>
    <string name="spider">The Spider</string>
    <string name="mountain">The Mountain</string>
    <string name="eunuch">The Eunuch</string>
    <string name="martell_seat">The \u0020seat\u0020 of\u0020 the\u0020 House\u0020 Martell\u0020 is</string>
    <string name="sunspear">Sunspear</string>
    <string name="highgarden">Highgarden</string>
    <string name="volantis">Volantis</string>
    <string name="weapon">The\u0020 weapon\u0020 that\u0020 can\u0020 kill\u0020 a\u0020 White\u0020 Walker\u0020 is\u0020 made\u0020 of</string>
    <string name="dragonglass">Dragonglass</string>
    <string name="obsidian">Obsidian</string>
    <string name="dragonstone">Dragonstone</string>
    <string name="valyrian">Valyrian steel</string>
    <string name="mad_king">The\u0020 name\u0020 of\u0020 the\u0020 Mad\u0020 King\u0020 is</string>
    <string name="aegon">Aegon</string>
    <string name="aeris">Aerys</string>
    <string name="aemon">Aemon</string>
    <string name="rhaegar">Rhaegar</string>
    <string name="kingsguard">The\u0020 number\u0020 of\u0020 the\u0020 knights\u0020 who\u0020 serve\u0020 in\u0020 the\u0020 Kingsguard\u0020 is</string>
    <string name="valar_morghulis">The \u0020meaning\u0020 of\u0020 the\u0020 High\u0020 Valyrian\u0020 aphorism\u0020\*Valar Morgulis\*\u0020 is</string>
    <string name="serve">All men must serve</string>
    <string name="today">Not today</string>
    <string name="die">All men must die</string>
    <string name="win">You win or you die </string>
    <string name="religion">The\u0020 dominant\u0020 religion\u0020 in\u0020 Westeros\u0020 is</string>
    <string name="old_gods">The Old Gods of the Forest</string>
    <string name="drowned_god">The Drowned God</string>
    <string name="faith">The Faith of the Seven</string>
    <string name="lord_of_light">The Lord of Light</string>
    <string name="lannister_motto">The\u0020 official\u0020 Lannister\u0020 house\u0020 motto\u0020 is</string>
    <string name="family">Family, Duty, Honor</string>
    <string name="roar">Hear me roar</string>
    <string name="debts">A Lannister always pays his debts</string>
    <string name="fury">Ours is the Fury</string>
    <string name="submit">Check\u0020 your\u0020 answers</string>
    <string name="retake">Try\u0020 again</string>
    <string name="result1">Your score is <xliff:g example="2" id="points">%d</xliff:g> out of 17. \"You know nothing, Jon Snow!\"</string>
    <string name="result2">Your score is <xliff:g example="7" id="points">%d</xliff:g> out of 17. \"Shame!\.\.\.Shame!\.\.\.Shame!\.\.\.\"</string>
    <string name="result3">Your score is <xliff:g example="11" id="points">%d</xliff:g> out of 17. \“That’s what I do. I drink, and I know things.\”</string>
    <string name="result4">Your score is <xliff:g example="17" id="points">%d</xliff:g> out of 17. You could help GRRM finish the ASoIaF series sooner.</string>
    <string name="omission">You skipped at least one question</string>
    <string name="got">#</string>
    <string name="welcome_cont">quiz</string>
    <string name="mute">mute</string>
    <string name="unmute">mute/unmute button</string>
</resources>
