<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gotquiz.MainActivity">

    <ImageView
        style="@style/bckg_style"
        android:contentDescription="@string/image"
        android:src="@drawable/wallpaper" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/my_layout"
            style="@style/parent_ll_style">

            <TextView
                android:id="@+id/intro"
                style="@style/intro_text_style1"
                android:text="@string/welcome" />

            <TextView
                android:id="@+id/intro2"
                style="@style/intro_text_style"
                android:text="@string/got"
                android:textSize="@dimen/got" />

            <TextView
                android:id="@+id/intro3"
                style="@style/intro_text_style"
                android:text="@string/welcome_cont" />

            <TextView
                style="@style/intro3_text_style"
                android:text="@string/warning" />

            <TextView
                style="@style/q_style"
                android:text="@string/stark_sword" />

            <RadioGroup
                android:id="@+id/sword"
                style="@style/rg_style">

                <RadioButton
                    android:id="@+id/needle"
                    style="@style/rb_style"
                    android:text="@string/needle" />

                <RadioButton
                    android:id="@+id/ice"
                    style="@style/rb_style"
                    android:text="@string/ice" />

                <RadioButton
                    android:id="@+id/longclaw"
                    style="@style/rb_style"
                    android:text="@string/longclaw" />

                <RadioButton
                    android:id="@+id/oathkeeper"
                    style="@style/rb_style"
                    android:text="@string/oathkeeper" />
            </RadioGroup>

            <TextView

                style="@style/q_style"
                android:text="@string/daenerys_nickname" />

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/stormborn"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/stormborn" />
            </LinearLayout>

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/unburnt"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/unburnt" />
            </LinearLayout>

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/queen"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/queen" />
            </LinearLayout>

            <LinearLayout
                style="@style/rg_style"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/silver"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/silver" />
            </LinearLayout>

            <TextView
                style="@style/q_style"
                android:text="@string/mormont_disease" />

            <RadioGroup
                android:id="@+id/jorah"
                style="@style/rg_style">

                <RadioButton
                    android:id="@+id/mere_dis"
                    style="@style/rb_style"
                    android:text="@string/mere" />

                <RadioButton
                    android:id="@+id/scale_dis"
                    style="@style/rb_style"
                    android:text="@string/grayscale" />

                <RadioButton
                    android:id="@+id/sickness_dis"
                    style="@style/rb_style"
                    android:text="@string/sickness" />

                <RadioButton
                    android:id="@+id/plague_dis"
                    style="@style/rb_style"
                    android:text="@string/plague" />
            </RadioGroup>


            <TextView
                style="@style/q_style"
                android:text="@string/arya_direwolf" />

            <!-- This LinearLayout is supposed to prevent the keyboard from appearing when the app starts-->
            <LinearLayout
                style="@style/inv_ll_style"
                tools:ignore="UselessLeaf" />

            <EditText
                android:id="@+id/direwolf_name"
                style="@style/etxt_style"
                android:hint="@string/type" />

            <TextView
                style="@style/q_style"
                android:text="@string/kingsguard" />

            <EditText
                android:id="@+id/kings_guards"
                style="@style/etxt2_style"
                android:hint="@string/type" />


            <TextView
                style="@style/q_style"
                android:text="@string/martell_seat" />

            <RadioGroup
                android:id="@+id/martell"
                style="@style/rg_style">

                <RadioButton
                    android:id="@+id/highgarden"
                    style="@style/rb_style"
                    android:text="@string/highgarden" />

                <RadioButton
                    android:id="@+id/dragonst"
                    style="@style/rb_style"
                    android:text="@string/dragonstone" />

                <RadioButton
                    android:id="@+id/sun"
                    style="@style/rb_style"
                    android:text="@string/sunspear" />

                <RadioButton
                    android:id="@+id/volantis"
                    style="@style/rb_style"
                    android:text="@string/volantis" />
            </RadioGroup>

            <TextView
                style="@style/q_style"
                android:text="@string/valar_morghulis" />

            <RadioGroup
                android:id="@+id/valar"
                style="@style/rg_style">

                <RadioButton
                    android:id="@+id/must_serve"
                    style="@style/rb_style"
                    android:text="@string/serve" />

                <RadioButton
                    android:id="@+id/must_today"
                    style="@style/rb_style"
                    android:text="@string/today" />

                <RadioButton
                    android:id="@+id/must_die"
                    style="@style/rb_style"
                    android:text="@string/die" />

                <RadioButton
                    android:id="@+id/must_win"
                    style="@style/rb_style"
                    android:text="@string/win" />
            </RadioGroup>

            <TextView
                style="@style/q_style"
                android:text="@string/varys_nickname" />

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/hound"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/hound" />
            </LinearLayout>

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/mountain"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/mountain" />
            </LinearLayout>

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/spider"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/spider" />
            </LinearLayout>

            <LinearLayout
                style="@style/rg_style"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/eunuch"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/eunuch" />
            </LinearLayout>

            <TextView
                style="@style/q_style"
                android:text="@string/mad_king" />

            <RadioGroup
                android:id="@+id/king"
                style="@style/rg_style">

                <RadioButton
                    android:id="@+id/aegon"
                    style="@style/rb_style"
                    android:text="@string/aegon" />

                <RadioButton
                    android:id="@+id/aeris"
                    style="@style/rb_style"
                    android:text="@string/aeris" />

                <RadioButton
                    android:id="@+id/aemon"
                    style="@style/rb_style"
                    android:text="@string/aemon" />

                <RadioButton
                    android:id="@+id/rhaegar"
                    style="@style/rb_style"
                    android:text="@string/rhaegar" />
            </RadioGroup>

            <TextView
                style="@style/q_style"
                android:text="@string/weapon" />

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/dragonglass"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/dragonglass" />
            </LinearLayout>

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/obsidian"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/obsidian" />
            </LinearLayout>

            <LinearLayout style="@style/chbox_ll_style">

                <CheckBox
                    android:id="@+id/dragonstone"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/dragonstone" />
            </LinearLayout>

            <LinearLayout
                style="@style/rg_style"
                android:orientation="horizontal"
                tools:ignore="TooManyViews">

                <CheckBox
                    android:id="@+id/valyrian"
                    style="@style/chbox_style" />

                <TextView
                    style="@style/chbox_style"
                    android:text="@string/valyrian" />
            </LinearLayout>

            <TextView
                style="@style/q_style"
                android:text="@string/religion" />

            <RadioGroup
                android:id="@+id/religion"
                style="@style/rg_style">

                <RadioButton
                    android:id="@+id/old_gods"
                    style="@style/rb_style"
                    android:text="@string/old_gods" />

                <RadioButton
                    android:id="@+id/faith"
                    style="@style/rb_style"
                    android:text="@string/faith" />

                <RadioButton
                    android:id="@+id/drowned_god"
                    style="@style/rb_style"
                    android:text="@string/drowned_god" />

                <RadioButton
                    android:id="@+id/lord_of_light"
                    style="@style/rb_style"
                    android:text="@string/lord_of_light" />
            </RadioGroup>

            <TextView
                style="@style/q_style"
                android:text="@string/lannister_motto" />

            <RadioGroup
                android:id="@+id/motto"
                style="@style/rg_style">

                <RadioButton
                    android:id="@+id/family"
                    style="@style/rb_style"
                    android:text="@string/family" />

                <RadioButton
                    android:id="@+id/roar"
                    style="@style/rb_style"
                    android:text="@string/roar" />

                <RadioButton
                    android:id="@+id/debts"
                    style="@style/rb_style"
                    android:text="@string/debts" />

                <RadioButton
                    android:id="@+id/fury"
                    style="@style/rb_style"
                    android:text="@string/fury" />
            </RadioGroup>

            <Button
                android:id="@+id/submit"
                style="@style/button_style"
                android:onClick="showScore"
                android:text="@string/submit" />

            <Button
                android:id="@+id/retake"
                style="@style/button_style"
                android:onClick="retakeQuiz"
                android:text="@string/retake"
                android:textSize="@dimen/question_size" />
        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/mute"
        style="@style/imgb_style"
        android:contentDescription="@string/unmute"
        android:onClick="sound"
        android:src="@drawable/ic_note" />

</RelativeLayout>
